fix spacing more with akash

--- a/simplq/src/styles/footer.module.scss
+++ b/simplq/src/styles/footer.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 5rem 10rem;
+  padding: 0 10rem;
   @media screen and (max-width: 550px) {
     padding: 2rem;
   }
@@ -43,7 +43,7 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
       }
 
       & > .list-container {
